Correccion de imagenes

--- a/frontend/src/assets/styles/base.css
+++ b/frontend/src/assets/styles/base.css
@@ -59,6 +59,10 @@
     background-color: var(--color-background);
 }
 
+img {
+  background-color: transparent !important;
+}
+
 a {
     font-weight: 500;
     color: #646cff;
