--- a/frontend/src/assets/styles/base.css
+++ b/frontend/src/assets/styles/base.css
@@ -1,8 +1,8 @@
 /* base.css */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --color-background: #1C2833; 
+    --color-background: #1C2833;
     --color-foreground: #FDEBD0;
     --color-primary: #F39C12;
     --color-primary-foreground: #1C2833;
@@ -54,7 +54,7 @@
 }
 * {
     color: var(--color-foreground);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color: var(--color-background);
 }
 
@@ -69,7 +69,7 @@ a:hover {
 }
 
 img {
-  background-color: transparent !important;
+    background-color: transparent !important;
 }
 
 body {
