--- a/frontend/src/assets/styles/base.css
+++ b/frontend/src/assets/styles/base.css
@@ -23,14 +23,14 @@
     --color-input: #2C3E50;
     --color-ring: #3498DB;
 
-    --color-destructive: #E74C3C;
+    --color-destructive: #df402f;
     --color-destructive-foreground: #FDEBD0;
 
     --chart-1: #F39C12;
     --chart-2: #3498DB;
     --chart-3: #E67E22;
     --chart-4: #5DADE2;
-    --chart-5: #F5B041;
+    --chart-5: #ffb134;
 
     --sidebar-background: #212F3C;
     --sidebar-foreground: #FDEBD0;
