--- a/frontend/src/assets/styles/base.css
+++ b/frontend/src/assets/styles/base.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-    --color-background: #161e35;
+    --color-background: #1C2833;
     --color-foreground: #FDEBD0;
     --color-primary: #F39C12;
     --color-primary-foreground: #1C2833;
@@ -12,9 +12,9 @@
     --color-accent: #2C3E50;
     --color-accent-foreground: #FDEBD0;
 
-    --color-card: #202b46;
+    --color-card: #212F3C;
     --color-card-foreground: #FDEBD0;
-    --color-popover:#202b46;
+    --color-popover: #212F3C;
     --color-popover-foreground: #FDEBD0;
     --color-muted: #2C3E50;
     --color-muted-foreground: #AAB7B8;
@@ -23,14 +23,14 @@
     --color-input: #2C3E50;
     --color-ring: #3498DB;
 
-    --color-destructive: #df402f;
+    --color-destructive: #E74C3C;
     --color-destructive-foreground: #FDEBD0;
 
     --chart-1: #F39C12;
     --chart-2: #3498DB;
     --chart-3: #E67E22;
     --chart-4: #5DADE2;
-    --chart-5: #ffb134;
+    --chart-5: #F5B041;
 
     --sidebar-background: #212F3C;
     --sidebar-foreground: #FDEBD0;
@@ -45,7 +45,7 @@
     font-weight: 400;
 
     color-scheme: light dark;
-    background-color: #242424;
+    background-color: transparent;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
